--- a/Panda-2/package.json
+++ b/Panda-2/package.json
@@ -29,7 +29,9 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "file-saver": "^2.0.5",
     "ionicons": "^7.0.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -47,6 +49,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.3.0",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
