--- a/Panda-2/package.json
+++ b/Panda-2/package.json
@@ -18,21 +18,28 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.2.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.3.0",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
-    "@ionic/angular": "^7.0.0",
+    "@capacitor-community/sqlite": "^5.2.3",
+    "@capacitor/android": "5.4.0",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/core": "^5.4.0",
+    "@capacitor/haptics": "^5.0.6",
+    "@capacitor/keyboard": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/sqlite": "^5.36.0",
+    "@ionic/angular": "^7.3.1",
+    "cordova-sqlite-storage": "^6.1.0",
     "file-saver": "^2.0.5",
     "ionicons": "^7.0.0",
     "jquery": "^3.7.1",
-    "rxjs": "~7.8.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -47,7 +54,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.3.0",
+    "@capacitor/cli": "^5.4.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
