--- a/Panda-2/package.json
+++ b/Panda-2/package.json
@@ -27,7 +27,9 @@
     "@capacitor-community/sqlite": "^5.2.3",
     "@capacitor/android": "5.4.0",
     "@capacitor/app": "^5.0.6",
+    "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "^5.4.0",
+    "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/keyboard": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
@@ -35,6 +37,8 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^7.3.1",
+    "@ionic/storage": "^4.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "cordova-sqlite-storage": "^6.1.0",
     "file-saver": "^2.0.5",
     "ionicons": "^7.0.0",
